--- a/index.html
+++ b/index.html
@@ -17,10 +17,21 @@
             </div>
         </div>
             <div class="videoPlayer">
-                <div class="videoOne"><h5>Video 1</h5><iframe width="560" height="315" src="https://www.youtube.com/embed/eM2W62wOQlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-                <div class="videoOne"><h5>video 2</h5><iframe width="560" height="315" src="https://www.youtube.com/embed/BHACKCNDMW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="videoOne"><h3>Video 1</h3><iframe width="560" height="315" src="https://www.youtube.com/embed/eM2W62wOQlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                <div class="videoOne"><h3>Video 2</h3><iframe width="560" height="315" src="https://www.youtube.com/embed/BHACKCNDMW8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             </div>
-        <div class="rankingStats"><ol><li></li></ol></div>
+        <div class="rankingStats">
+            <h5>Top 5</h5>
+            <div class="table">
+                <ol>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                    <li><img src="" alt=""></li>
+                </ol>
+            </div>
+        </div>            
     </div>
 </body>
 </html>
