Switched 2 pictures for an icon

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body id="back">
         <div>
             <a href="home.html">
-                <img class="refr" src="refr.png" alt="Refresh" style="float: left; width: 5%; height: 5%;">
+                <img class="refr" src="/icons/refreshIcon.png" alt="Refresh" style="float: left; width: 5%; height: 5%;">
             </a>
             <br><br>
             <h1 class="hed">Video voting competition</h1>
