--- a/rankings.html
+++ b/rankings.html
@@ -11,7 +11,7 @@
 
     <div>
         <a href="rankings.html">
-        <img class="refr" src="refr.png" alt="Refresh" style="float:left;width:5%;height:5%;">
+        <img class="refr" src="/icons/refreshIcon.png" alt="Refresh" style="float:left;width:5%;height:5%;">
         </a>
         <br>
         <br>
