Fixed some name issues

--- a/index.html
+++ b/index.html
@@ -7,36 +7,36 @@
     <body id="back">
         <div>
             <a href="home.html">
-                <img class="refr" src="/icons/refreshIcon.png" alt="Refresh" style="float: left; width: 5%; height: 5%;">
+                <img class="refresh" src="/icons/refreshIcon.png" alt="Refresh" style="float: left; width: 2.5%; height: 2.5%;">
             </a>
             <br><br>
-            <h1 class="hed">Video voting competition</h1>
+            <h1 class="head">Video voting competition</h1>
         </div>
         <div>
-            <form id="for" action="rankings.html">
+            <form id="form" action="rankings.html">
                 <input type="submit" value="Go to Rankings Page">
             </form>
         </div>
         <div id="vid1">
             <h3>Video 1</h3>
-            <iframe src="https://www.youtube.com/embed/KBSsrFLn6SE" allowfullscreen> </iframe>
+            <iframe src="https://www.youtube.com/embed/-69Um12NXXQ?" allowfullscreen> </iframe>
             <br>
-            <button class="butto">Vote</button>
+            <button class="button">Vote</button>
         </div>
         <div id="vid2">
             <h3>Video 2</h3>
-            <iframe src="https://www.youtube.com/embed/rU_1BWq9HJI" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/EXDQUZAZa58?" allowfullscreen></iframe>
             <br>
-            <button class="butto">Vote</button>
+            <button class="button">Vote</button>
         </div>
         <div id="vid3">
             <h3>Video 3</h3>
-            <iframe src="https://www.youtube.com/embed/jZvFEtR8RH0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Pge7x2PchZg?" allowfullscreen></iframe>
             <br>
-            <button class="butto">Vote</button>
+            <button class="button">Vote</button>
         </div>
-        <h3 class="hed">Top 5 videos</h3>
-        <div id="tabl">
+        <h3 class="head">Top 5 videos</h3>
+        <div id="table">
             <table width=100% padding=30px>
                 <tr>
                     <th>Rank</th>
