--- a/rankings.html
+++ b/rankings.html
@@ -15,7 +15,7 @@
         </a>
         <br>
         <br>
-        <h1 id="hed">Rankings</h1>
+        <h1 id="head">Rankings</h1>
 
         
 
@@ -28,7 +28,7 @@
 
 <br>
 
-    <div id="tabl">
+    <div id="table">
         <table width=100% padding=30px>
             <tr>
                 <th>Rank</th>
