edited everything with prettier

--- a/index.html
+++ b/index.html
@@ -1,81 +1,117 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="/style.css">
-        <title>Video voting</title>
-    </head>
-    <body id="back">
-        <div>
-            <a href="home.html">
-                <img class="refresh" src="/icons/refreshIcon.png" alt="Refresh" style="float: left; width: 2.5%; height: 2.5%;">
-            </a>
-            <br><br>
-            <h1 class="head">Video voting competition</h1>
-        </div>
-        <div>
-            <form id="form" action="rankings.html">
-                <input type="submit" value="Go to Rankings Page">
-            </form>
-        </div>
-        <div id="vid1">
-            <h3>Video 1</h3>
-            <iframe src="https://www.youtube.com/embed/-69Um12NXXQ?" allowfullscreen> </iframe>
-            <br>
-            <button class="button">Vote</button>
-        </div>
-        <div id="vid2">
-            <h3>Video 2</h3>
-            <iframe src="https://www.youtube.com/embed/EXDQUZAZa58?" allowfullscreen></iframe>
-            <br>
-            <button class="button">Vote</button>
-        </div>
-        <div id="vid3">
-            <h3>Video 3</h3>
-            <iframe src="https://www.youtube.com/embed/Pge7x2PchZg?" allowfullscreen></iframe>
-            <br>
-            <button class="button">Vote</button>
-        </div>
-        <h3 class="head">Top 5 videos</h3>
-        <div id="table">
-            <table width=100% padding=30px>
-                <tr>
-                    <th>Rank</th>
-                    <th>Thumbnail</th>
-                    <th>Title</th>
-                    <th>Vote count</th>
-                </tr>
-                <tr>
-                    <td>1.</td>
-                    <td><img src="http://img.youtube.com/vi/rU_1BWq9HJI/1.jpg" alt="Thumbnail"></td>
-                    <td>Video 2</td>
-                    <td>1200</td>
-                </tr>
-                <tr>
-                    <td>2.</td>
-                    <td><img src="http://img.youtube.com/vi/jZvFEtR8RH0/2.jpg" alt="Thumbnail"></td>
-                    <td>Video 10</td>
-                    <td>1000</td>
-                </tr>
-                <tr>
-                    <td>3.</td>
-                    <td><img src="http://img.youtube.com/vi/jZvFEtR8RH0/1.jpg" alt="Thumbnail"></td>
-                    <td>Video 200</td>
-                    <td>900</td>
-                </tr>
-                <tr>
-                    <td>4.</td>
-                    <td><img src="http://img.youtube.com/vi/jZvFEtR8RH0/2.jpg" alt="Thumbnail"></td>
-                    <td>Video Naziv</td>
-                    <td>320</td>
-                </tr>
-                <tr>
-                    <td>5.</td>
-                    <td><img src="http://img.youtube.com/vi/rU_1BWq9HJI/1.jpg" alt="Thumbnail"></td>
-                    <td>Naslov videa</td>
-                    <td>30</td>
-                </tr>
-
-            </table>
-        </div>
-    </body>
+  <head>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
+    <title>Video voting</title>
+  </head>
+  <body id="back">
+    <div>
+      <a href="home.html">
+        <img
+          class="refresh"
+          src="/icons/refreshIcon.png"
+          alt="Refresh"
+          style="float: left; width: 2.5%; height: 2.5%"
+        />
+      </a>
+      <br /><br />
+      <h1 class="head">Video voting competition</h1>
+    </div>
+    <div>
+      <form id="form" action="rankings.html">
+        <input type="submit" value="Go to Rankings Page" />
+      </form>
+    </div>
+    <div id="vid1">
+      <h3>Video 1</h3>
+      <iframe src="https://www.youtube.com/embed/-69Um12NXXQ?" allowfullscreen>
+      </iframe>
+      <br />
+      <button class="button">Vote</button>
+    </div>
+    <div id="vid2">
+      <h3>Video 2</h3>
+      <iframe
+        src="https://www.youtube.com/embed/EXDQUZAZa58?"
+        allowfullscreen
+      ></iframe>
+      <br />
+      <button class="button">Vote</button>
+    </div>
+    <div id="vid3">
+      <h3>Video 3</h3>
+      <iframe
+        src="https://www.youtube.com/embed/Pge7x2PchZg?"
+        allowfullscreen
+      ></iframe>
+      <br />
+      <button class="button">Vote</button>
+    </div>
+    <h3 class="head">Top 5 videos</h3>
+    <div id="table">
+      <table width="100%" padding="30px">
+        <tr>
+          <th>Rank</th>
+          <th>Thumbnail</th>
+          <th>Title</th>
+          <th>Vote count</th>
+        </tr>
+        <tr>
+          <td>1.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/rU_1BWq9HJI/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 2</td>
+          <td>1200</td>
+        </tr>
+        <tr>
+          <td>2.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/jZvFEtR8RH0/2.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 10</td>
+          <td>1000</td>
+        </tr>
+        <tr>
+          <td>3.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/jZvFEtR8RH0/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 200</td>
+          <td>900</td>
+        </tr>
+        <tr>
+          <td>4.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/jZvFEtR8RH0/2.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video Naziv</td>
+          <td>320</td>
+        </tr>
+        <tr>
+          <td>5.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/rU_1BWq9HJI/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Naslov videa</td>
+          <td>30</td>
+        </tr>
+      </table>
+    </div>
+  </body>
 </html>
