--- a/rankings.html
+++ b/rankings.html
@@ -1,124 +1,158 @@
 <!DOCTYPE html>
 <html lang="en" xml:lang="en">
-
-<head>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+  <head>
+    <link rel="stylesheet" type="text/css" href="/style.css" />
     <title>Rankings</title>
-    <meta charset="UTF-8">
-</head>
+    <meta charset="UTF-8" />
+  </head>
 
-<body id="back">
-
+  <body id="back">
     <div>
-        <a href="rankings.html">
-        <img class="refr" src="/icons/refreshIcon.png" alt="Refresh" style="float:left;width:5%;height:5%;">
-        </a>
-        <br>
-        <br>
-        <h1 id="head">Rankings</h1>
-
-        
-
+      <a href="rankings.html">
+        <img
+          class="refr"
+          src="/icons/refreshIcon.png"
+          alt="Refresh"
+          style="float: left; width: 5%; height: 5%"
+        />
+      </a>
+      <br />
+      <br />
+      <h1 id="head">Rankings</h1>
     </div>
-<div id="for">
-    <form action="index.html">
+    <div id="for">
+      <form action="index.html">
         <input type="submit" value="Votings" />
-    </form>
-</div>
+      </form>
+    </div>
 
-<br>
+    <br />
 
     <div id="table">
-        <table width=100% padding=30px>
-            <tr>
-                <th>Rank</th>
-                <th></th>
-                <th>Title</th>
-                <th>Vote count</th>
-            </tr>
-            <tr>
-        <td>1.</td>
-                <td><img src="http://img.youtube.com/vi/rU_1BWq9HJI/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 2</td>
-                <td>500</td>
-            </tr>
-            <tr>
-                <td>2.</td>
-                <td><img src="http://img.youtube.com/vi/zVgKnfN9i34/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 3</td>
-                <td>499</td>
-            </tr>
-            <tr>
-                <td>3.</td>
-                <td><img src="http://img.youtube.com/vi/KBSsrFLn6SE/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 1</td>
-                <td>400</td>
-            </tr>        <tr>
-             
-             <tr>
-                <td>4.</td>
-                <td><img src="http://img.youtube.com/vi/zVgKnfN9i34/3.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 4</td>
-                <td>385</td>
-            </tr>
+      <table width="100%" padding="30px">
+        <tr>
+          <th>Rank</th>
+          <th></th>
+          <th>Title</th>
+          <th>Vote count</th>
+        </tr>
+        <tr>
+          <td>1.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/rU_1BWq9HJI/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 2</td>
+          <td>500</td>
+        </tr>
+        <tr>
+          <td>2.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/zVgKnfN9i34/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 3</td>
+          <td>499</td>
+        </tr>
+        <tr>
+          <td>3.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/KBSsrFLn6SE/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 1</td>
+          <td>400</td>
+        </tr>
+        <tr></tr>
 
-            <tr>
-                <td>5.</td>
-                <td><img src="http://img.youtube.com/vi/GH9u4eZQGk8/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 5</td>
-                <td>350</td>
-            </tr>
+        <tr>
+          <td>4.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/zVgKnfN9i34/3.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 4</td>
+          <td>385</td>
+        </tr>
 
-            <tr>
-                <td>6.</td>
-                <td><img src="http://img.youtube.com/vi/FmS5GYVugSc/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 6</td>
-                <td>300</td>
-            </tr>
-            <tr>
-                <td>7.</td>
-                <td><img src="http://img.youtube.com/vi/3SDBTVcBUVs/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 7</td>
-                <td>266</td>
-            </tr>
-            <tr>
-                <td>8.</td>
-                <td><img src="http://img.youtube.com/vi/hqOIMtMDYXo/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 8</td>
-                <td>200</td>
-            </tr>
+        <tr>
+          <td>5.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/GH9u4eZQGk8/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 5</td>
+          <td>350</td>
+        </tr>
 
-            <tr>
-                <td>9.</td>
-                <td><img src="http://img.youtube.com/vi/EgWDYeXDCS4/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 9</td>
-                <td>199</td>
-            </tr>
+        <tr>
+          <td>6.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/FmS5GYVugSc/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 6</td>
+          <td>300</td>
+        </tr>
+        <tr>
+          <td>7.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/3SDBTVcBUVs/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 7</td>
+          <td>266</td>
+        </tr>
+        <tr>
+          <td>8.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/hqOIMtMDYXo/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 8</td>
+          <td>200</td>
+        </tr>
 
-            <tr>
-                <td>10.</td>
-                <td><img src="http://img.youtube.com/vi/xsYdLeeHiu0/1.jpg" alt="Thumbnail">
-                </td>
-                <td>Video 10</td>
-                <td>88</td>
-            </tr>
+        <tr>
+          <td>9.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/EgWDYeXDCS4/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 9</td>
+          <td>199</td>
+        </tr>
 
-
-
-
-
-        </table>
-
-
+        <tr>
+          <td>10.</td>
+          <td>
+            <img
+              src="http://img.youtube.com/vi/xsYdLeeHiu0/1.jpg"
+              alt="Thumbnail"
+            />
+          </td>
+          <td>Video 10</td>
+          <td>88</td>
+        </tr>
+      </table>
     </div>
-
-</body>
+  </body>
+</html>
